Fixed spacing issues and edited colors to be deutsch-like

--- a/css/main.css
+++ b/css/main.css
@@ -25,21 +25,22 @@ h3 {
     
 p {
     font-family: Didact Gothic, sans-serif;
-    margin-left: 150px;
-    font-size: 90%;
+    margin-left: 100px;
+    font-size: 14px;
     line-height: 1.2em;
+    postion: relative;
 }
 
 strong {
-    font-size: 1.4em;
+    font-size: 1.5em;
 }
 
 #innovative {
-    border: 1px solid #ff3333;
-    background-color: #ff3333;
+    border: 1px solid #222222;
+    background-color: #222222;
     height: 200px;
     width: 200px;
-    margin-right: 180px;
+    margin-right: 100px;
     color: white;
     font-size: 800%;
     text-align: center;
@@ -50,11 +51,11 @@ strong {
 #innovative2 {
     height: 200px;
     width: 200px;
-    margin-right: 180px;
+    margin-right: 100px;
     text-align: left;
     border: 1px solid white;
     background-color: white;
-    color: black;
+    color: #222222;
     position: absolute;
     padding: 10px;
 }
@@ -67,8 +68,8 @@ strong {
     border: 1px solid #ff3333;
     background-color: #ff3333;
     height: 200px;
-    width: 450px;
-    margin-left: 420px;
+    width: 500px;
+    margin-left: 400px;
     color: white;
     font-size: 800%;
     text-align: right;
@@ -78,12 +79,12 @@ strong {
 
 #useful2 {
     height: 200px;
-    width: 450px;
-    margin-left: 420px;
+    width: 500px;
+    margin-left: 400px;
     text-align: left;
     border: 1px solid white;
     background-color: white;
-    color: black;
+    color: #222222;
     position: absolute;
     padding: 10px;
 }
@@ -93,12 +94,12 @@ strong {
 }
 
 #aesthetic {
-    border: 1px solid #ff3333;
+    border: 1px solid #FFCD29;
     border-radius: 50%;
-    background-color: #ff3333;
+    background-color: #FFCD29;
     height: 200px;
     width: 200px;
-    margin-left:950px;
+    margin-left: 1000px;
     color: white;
     font-size: 800%;
     text-align: center;
@@ -112,9 +113,9 @@ strong {
     background-color: white;
     height: 200px;
     width: 200px;
-    margin-left: 950px;
+    margin-left: 1000px;
     text-align: center;
-    color: black;
+    color: #222222;
     position: absolute;
     padding: 10px;
     display: table-cell;
@@ -131,7 +132,7 @@ strong {
     background-color: #ff3333;
     height: 200px;
     width: 200px;
-    margin-right:200px;
+    margin-right:100px;
     margin-top: 260px;
     color: white;
     font-size: 800%;
@@ -146,9 +147,9 @@ strong {
     background-color: white;
     height: 200px;
     width: 200px;
-    margin-right: 200px;
+    margin-right: 100px;
     margin-top: 260px;
-    color: black;
+    color: #222222;
     position: absolute;
     padding: 10px;
     display: table-cell;
@@ -164,8 +165,8 @@ strong {
     border: 1px solid #ff3333;
     background-color: #ff3333;
     height: 200px;
-    width: 180px;
-    margin-left: 420px;
+    width: 200px;
+    margin-left: 400px;
     margin-top: 260px;
     color: white;
     font-size: 800%;
@@ -178,11 +179,11 @@ strong {
     border: 1px solid white;
     background-color: white;
     height: 200px;
-    width: 180px;
-    margin-left: 420px;
+    width: 200px;
+    margin-left: 400px;
     margin-top: 260px;
     text-align: left;
-    color: black;
+    color: #222222;
     position: absolute;
     padding: 10px;
 }
@@ -192,12 +193,12 @@ strong {
 }
 
 #honest {
-    border: 1px solid #ff3333;
+    border: 1px solid #222222;
     border-top-left-radius:100%;
-    background-color: #ff3333;
+    background-color: #222222;
     height: 200px;
     width: 200px;
-    margin-left: 670px;
+    margin-left: 700px;
     margin-top: 260px;
     color: white;
     font-size: 800%;
@@ -212,10 +213,10 @@ strong {
     background-color: white;
     height: 200px;
     width: 200px;
-    margin-left: 670px;
+    margin-left: 700px;
     margin-top: 260px;
     text-align: right;
-    color: black;
+    color: #222222;
     position: absolute;
     padding: 10px;
 }
@@ -230,7 +231,7 @@ strong {
     background-color: #ff3333;
     height: 200px;
     width: 200px;
-    margin-left: 950px;
+    margin-left: 1000px;
     margin-top: 260px;
     color: white;
     font-size: 800%;
@@ -245,10 +246,10 @@ strong {
     background-color: white;
     height: 200px;
     width: 200px;
-    margin-left: 950px;
+    margin-left: 1000px;
     margin-top: 260px;
     text-align: left;
-    color: black;
+    color: #222222;
     position: absolute;
     padding: 10px;
 }
@@ -258,12 +259,12 @@ strong {
 }
 
 #thorough {
-    border: 1px solid #ff3333;
+    border: 1px solid #FFCD29;
     border-radius: 50%;
-    background-color: #ff3333;
+    background-color: #FFCD29;
     height: 200px;
     width: 200px;
-    margin-right:200px;
+    margin-right:100px;
     margin-top: 520px;
     color: white;
     font-size: 800%;
@@ -278,9 +279,9 @@ strong {
     background-color: white;
     height: 200px;
     width: 200px;
-    margin-right: 200px;
+    margin-right: 100px;
     margin-top: 520px;
-    color: black;
+    color: #222222;
     position: absolute;
     padding: 10px;
     display: table-cell;
@@ -293,11 +294,11 @@ strong {
 }
 
 #environmental {
-    border: 1px solid #ff3333;
-    background-color: #ff3333;
+    border: 1px solid #222222;
+    background-color: #222222;
     height: 200px;
-    width: 180px;
-    margin-left: 420px;
+    width: 200px;
+    margin-left: 400px;
     margin-top: 520px;
     color: white;
     font-size: 800%;
@@ -310,11 +311,11 @@ strong {
     border: 1px solid white;
     background-color: white;
     height: 200px;
-    width: 180px;
-    margin-left: 420px;
+    width: 200px;
+    margin-left: 400px;
     margin-top: 520px;
     text-align: left;
-    color: black;
+    color: #222222;
     position: absolute;
     padding: 10px;
 }
@@ -324,11 +325,11 @@ strong {
 }
 
 #little {
-    border: 1px solid #ff3333;
-    background-color: #ff3333;
+    border: 1px solid #FFCD29;
+    background-color: #FFCD29;
     height: 200px;
-    width: 480px;
-    margin-left: 670px;
+    width: 500px;
+    margin-left: 700px;
     margin-top: 520px;
     color: white;
     font-size: 800%;
@@ -342,11 +343,11 @@ strong {
     border: 1px solid white;
     background-color: white;
     height: 200px;
-    width: 480px;
-    margin-left: 670px;
+    width: 500px;
+    margin-left: 700px;
     margin-top: 520px;
     text-align: left;
-    color: black;
+    color: #222222;
     position: absolute;
     padding: 10px;
     overflow: hidden;
@@ -356,21 +357,30 @@ strong {
     opacity: 0;
 }
 
-img {
-    float: left;
-    max-width: 200px;
-    padding-right: 20px;
-}
-
 div {
     clear: left;
     position: relative;
     bottom: -900px;
     width: 100%;
     height: 210px;
-    background-color: black;
+    background-color: #222222;
     font-family: Francois One, sans-serif;
     color: white;
     font-size: 140%;
+}
+
+img {
+    float: left;
+    max-width: 200px;
+    padding-right: 30px;
+}
+
+div ul {
+    padding-right: 30px;
     line-height: 2em;
+}
+
+li:first-of-type {
+    font-size: 42px;
+    padding-top: 30px;
 }
